--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,77 @@ html,
 body {
   height: 100%;
 }
+html,
+body {
+  height: 100%;
+  width: 1000px;
+  margin: 0 auto;
+}
+body {
+  background-color: white;
+}
+.container {
+  background-color: white;
+}
+header {
+  border-bottom: 1px solid black;
+  margin: 20px 0;
+  padding: 20px 0;
+  display: flex;
+  justify-content: space-between;
+}
+@media (max-width: 500px) {
+  header {
+    width: 45%;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+header h1 {
+  font-size: 4rem;
+  color: blue;
+  margin-bottom: 20px;
+}
+@media (max-width: 500px) {
+  header h1 {
+    font-size: 2rem;
+    margin-top: 10px;
+  }
+}
+header nav {
+  width: 500px;
+  display: flex;
+  justify-content: space-between;
+}
+header a {
+  font-family: Arial, "sans-serif";
+  font-size: 1rem;
+  margin: 0 auto;
+  text-decoration: none;
+  cursor: pointer;
+}
+@media (max-width: 500px) {
+  header a {
+    flex-direction: column;
+  }
+}
+.section {
+  margin: 20px;
+}
+@media (max-width: 500px) {
+  .section {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+}
+.section h2 {
+  font-family: Arial, "sans-serif";
+  color: blue;
+}
+@media (max-width: 500px) {
+  .section p {
+    width: 42%;
+    text-align: justify;
+  }
+}
