--- a/less/index.less
+++ b/less/index.less
@@ -53,7 +53,105 @@ table {
     box-sizing: border-box;
 }
 
+
+
+
 html, body {
     height: 100%;
 }
+
+html, body {
+	height: 100%;
+	width: 1000px;
+	margin: 0 auto;
+}
+
+@background-color: white;
+@main-color:white;
+@font-color: blue;
+@font-stack: Arial, "sans-serif";
+
+.center() {
+	display: flex;
+	justify-content: space-between;
+}
+
+.column() {
+	flex-direction: column;
+}
+
+
+body {
+	background-color: @background-color;
+}
+.container {
+	background-color: @main-color;
+}
+
+header {
+	border-bottom: 1px solid black;
+	margin: 20px 0;
+	padding: 20px 0;
+	.center;
+
+	@media (max-width: 500px) {
+		width: 45%;
+		.column;
+		align-items: center;
+	}
+
+	h1 {
+		font-size: 4rem;
+		color: @font-color;
+		margin-bottom: 20px;
+
+		@media (max-width: 500px) {
+			font-size: 2rem;
+			margin-top: 10px;
+		} 
+	} //h1 closes
+
+	nav {
+		width: 500px;
+		.center;
+	}
+
+	a {
+		font-family: @font-stack;
+		font-size: 1rem;
+		margin: 0 auto;
+		text-decoration: none;
+		cursor: pointer;
+
+		@media (max-width: 500px) {
+			.column;
+		}
+	} //a closes
+} //header closes
+
+
+
+.section {
+	margin: 20px;
+	
+	@media (max-width: 500px) {
+		.center;
+		.column;
+	}
+
+	h2 {
+		font-family: @font-stack;
+		color: @font-color;
+	} //h2 ends
+
+	p {
+		@media (max-width: 500px) {
+			width: 42%;
+			text-align: justify;
+		}
+	} //p ends
+	
+} //section ends
+
+
 
